--- a/original/src/common/style/reset.css
+++ b/original/src/common/style/reset.css
@@ -4,6 +4,10 @@ li{
 h1,h2,h3,h4,h5,h6{
     font-weight: normal;
 }
+i{
+    /* font-family: normal; */
+    font-style: normal;
+}
 *{
     margin: 0;
     padding: 0;
